--- a/Marketing/css/styles.css
+++ b/Marketing/css/styles.css
@@ -62,22 +62,8 @@
     font-style: normal;
 
 }
-@font-face {
-    font-family: 'integral_cfmedium';
-    src: url('./fonts/integralcf-medium-webfont.woff2') format('woff2'),
-         url('./fonts/integralcf-medium-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
 
-}
-@font-face {
-    font-family: 'integral_cfmedium_oblique';
-    src: url('./fonts/integralcf-mediumoblique-webfont.woff2') format('woff2'),
-         url('./fonts/integralcf-mediumoblique-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
 
-}
 @font-face {
     font-family: 'integral_cfregular';
     src: url('./fonts/integralcf-regular-webfont.woff2') format('woff2'),
@@ -86,14 +72,7 @@
     font-style: normal;
 
 }
-@font-face {
-    font-family: 'integral_cfregular_oblique';
-    src: url('./fonts/integralcf-regularoblique-webfont.woff2') format('woff2'),
-         url('./fonts/integralcf-regularoblique-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
 
-}
 .modales {
     position: fixed;
     z-index: 100000;
@@ -175,7 +154,7 @@ ul li {
     color: #fff;
 }
 .huge {
-    font-size: 16rem;
+    font-size: 14rem;
     font-weight: 700;
     line-height: 75.5%;
 }
@@ -186,18 +165,13 @@ ul li {
     font-family: 'integral_cfregular';
     color: #fff;
 }
-.huge {
-    font-size: 16rem;
-    font-weight: 700;
-    line-height: 75.5%;
-}
 .intro-section_top h1 {
     position: absolute;
     right: 10%;
     top: -28px;
     font-size: 1.7rem;
     width: 329px;
-    font-family: Graphik;
+    font-family: 'integral_cfdemi_bold';
     text-transform: lowercase;
     font-weight: 400;
     line-height: 140%;
@@ -247,6 +221,387 @@ a.button.primary, button.primary {
     height: 60px;
     margin: 0 1rem;
 }
+.spotlight-section {
+    position: relative;
+    height: 100vh;
+    overflow-y: hidden;
+    -moz-box-align: center;
+    display: -moz-box;
+    display: flex;
+    align-items: center;
+    background: transparent;
+    background-size: cover;
+    overflow-x: hidden;
+}
+.spotlight-section_top {
+    display: -moz-box;
+    display: flex;
+    -moz-box-align: start;
+    align-items: flex-start;
+}
+.spotlight-section_top .left {
+    -moz-box-flex: 0;
+    flex: 0 0 45%;
+    margin-right: 5%;
+}
+.spotlight-section_top .right {
+    -moz-box-flex: 0;
+    flex: 0 0 50%;
+}
+.about-text {
+    font-family: 'integral_cfdemi_bold';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 120%;
+    color: #fff;
+}
+.about-text:not(:last-child) {
+    margin-bottom: 2.5rem;
+}
+.about-text.t2 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 100%;
+    color: #fff;
+}
+.about-text {
+    font-family: 'integral_cfdemi_bold';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 120%;
+    color: #fff;
+}
+.about-text .lines {
+    overflow: hidden;
+    padding-top: 1rem;
+    margin-bottom: -1rem;
+    display: inline!important;
+}
+.about-text.t4 {
+    font-family: 'integral_cfregular';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 95px;
+    line-height: 80.5%;
+    text-align: right;
+    letter-spacing: -.02em;
+    color: #fff;
+    width: auto;
+}
+.spotlight-section_bottom {
+    position: relative;
+    top: 3rem;
+}
+.text-primary {
+    color: #fe0089!important;
+}
+.case-studies, .case-studies__counter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.case-studies {
+    display: -moz-box;
+    display: flex;
+    flex-flow: nowrap;
+    height: 100%;
+}
+.single-study__vertical {
+    display: grid;
+    -moz-box-flex: 1;
+    flex: 1 0 33.33333%;
+    grid-template-rows: 50% 50%;
+    position: relative;
+}
+.single-study__section {
+    overflow: hidden;
+    display: -moz-box;
+    display: flex;
+    -moz-box-align: center;
+    align-items: center;
+    -moz-box-pack: center;
+    justify-content: center;
+    position: relative;
+}
+.single-study__section__bg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+}
+.single-study__section__bg img {
+    width: 100%;
+    height: 100%;
+    -webkit-object-fit: cover;
+    object-fit: cover;
+    -webkit-transition: -webkit-transform .5s cubic-bezier(.5,0,.5,1);
+    transition: -webkit-transform .5s cubic-bezier(.5,0,.5,1);
+    transition: transform .5s cubic-bezier(.5,0,.5,1);
+    transition: transform .5s cubic-bezier(.5,0,.5,1),-webkit-transform .5s cubic-bezier(.5,0,.5,1);
+}
+.single-study__vertical:hover img {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+.single-study__section .content {
+    padding: 3rem;
+    width: 100%;
+}
+.single-study__section .title {
+   font-family: 'integral_cfregular';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 38px;
+    margin-bottom: 1rem;
+    color: #000;
+    width: 85%;
+}
+.single-study__section a {
+   font-family: 'integral_cfregular';
+    text-transform: uppercase;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: .1em;
+    display: block;
+    margin-top: 4rem;
+    color: #000;
+    -webkit-transition: color .5s cubic-bezier(.5,0,.5,1);
+    transition: color .5s cubic-bezier(.5,0,.5,1);
+}
+.single-study__section .content a.button {
+    display: none;
+}
+a.button.black-opaque, button.black-opaque {
+    background-color: rgba(0,0,0,.5);
+    color: #fff;
+}
+.single-study__section {
+    overflow: hidden;
+    display: -moz-box;
+    display: flex;
+    -moz-box-align: center;
+    align-items: center;
+    -moz-box-pack: center;
+    justify-content: center;
+    position: relative;
+}
+.single-study__vertical:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0,0,0,.4);
+    z-index: -1;
+    opacity: 0;
+    visibility: hidden;
+}
+.scroll-down {
+    position: absolute;
+    right: 5%;
+    bottom: 10%;
+    z-index: 50;
+    mix-blend-mode: difference;
+    pointer-events: none;
+}
+.case-studies__wrapper .scroll-down {
+    position: absolute;
+    right: 50%;
+    -webkit-transform: translateX(50%)!important;
+    transform: translateX(50%)!important;
+    bottom: -9%;
+    z-index: 50;
+    mix-blend-mode: difference;
+    pointer-events: none;
+}
+.fp-section.fp-table, .fp-slide.fp-table {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+}
+.fp-tableCell {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+}
+.fp-scrollable {
+    position: relative;
+}
+.fp-scrollable, .fp-scroller {
+    overflow: hidden;
+}
+.fp-scroller {
+    -webkit-transition: translateZ .5s cubic-bezier(.5,0,.5,1),translate .5s cubic-bezier(.5,0,.5,1);
+    transition: translateZ .5s cubic-bezier(.5,0,.5,1),translate .5s cubic-bezier(.5,0,.5,1);
+}
+.fp-scrollable, .fp-scroller {
+    overflow: hidden;
+}
+.services_home {
+    height: unset;
+    padding: 18rem 0;
+}
+.services {
+    height: 100vh;
+    overflow-y: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    padding: 10rem 0;
+    position: relative;
+}
+.wrapper {
+    width: 90%;
+    max-width: 1720px;
+    margin: 0 auto;
+}
+.services-link {
+   font-family: 'integral_cfregular';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 91%;
+    letter-spacing: -.01em;
+    width: 600px;
+    margin-bottom: 5rem;
+    color: #fff;
+    -webkit-transition: color .5s cubic-bezier(.5,0,.5,1);
+    transition: color .5s cubic-bezier(.5,0,.5,1);
+}
+.services-link.active {
+    color: #fe0089!important;
+}
+.scroll-down {
+    position: absolute;
+    right: 5%;
+    bottom: 10%;
+    z-index: 50;
+    mix-blend-mode: difference;
+    pointer-events: none;
+}
+.services_home-main .background {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.services_home-main .background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5);
+    z-index: 10;
+}
+.services_home-main .background img {
+    position: absolute;
+    z-index: -2!important;
+    -webkit-object-fit: cover;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+.services-heading {
+   font-family: 'integral_cfregular';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 93px;
+    line-height: 81%;
+    letter-spacing: -.02em;
+    color: #fff;
+    margin-bottom: 3rem;
+}
+.services-inner_main h3 {
+    cursor: text;
+}
+.services-heading {
+   font-family: 'integral_cfregular';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 93px;
+    line-height: 81%;
+    letter-spacing: -.02em;
+    color: #fff;
+    margin-bottom: 3rem;
+}
+.services-inner_main h3 {
+    cursor: text;
+}
+.services-heading {
+   font-family: 'integral_cfregular';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 93px;
+    line-height: 81%;
+    letter-spacing: -.02em;
+    color: #fff;
+    margin-bottom: 3rem;
+}
+a.button, button {
+   font-family: 'integral_cfregular';
+    border: 0;
+    font-size: 18px;
+    outline: none;
+    background: transparent;
+    padding: 1rem 2rem;
+    border-radius: 10rem;
+    cursor: pointer;
+    -webkit-transition: filter .5s cubic-bezier(.5,0,.5,1);
+    transition: filter .5s cubic-bezier(.5,0,.5,1);
+}
+.services-inner_main {
+    z-index: 100;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 35%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    pointer-events: none;
+}
+.services_home-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+}
+.fp-section.fp-table, .fp-slide.fp-table {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+}
+.fp-tableCell {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+}
+.fp-section {
+    position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.fp-enabled body, html.fp-enabled {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 @keyframes cambia_fondo {   
     0% {
         background-image: url('../images/fondo-1.jpg');
@@ -273,3 +628,4 @@ a.button.primary, button.primary {
         margin-bottom:1rem;
     }
 }
+
