--- a/THL/css/style.css
+++ b/THL/css/style.css
@@ -1387,7 +1387,7 @@ Topbar
 
 #topbar.dark.topbar-transparent {
     background-color: transparent;
-    border-bottom: 1px solid rgba(144, 144, 144, 0.25);
+    border-bottom: 1px solid transparent;
 }
 
 #topbar~#header[data-transparent="true"]+#slider,
@@ -20942,8 +20942,7 @@ body[data-bg-image] {
 }
 
 .header-sticky .header-inner #logo a.content-logo {
-    /* background-image: url('../images/logo-darck.jpg'); */
-    background-image: url('../images/01.png');
+    background-image: url('../images/02.png');
 }
 
 .arrowScrollDown {
