--- a/THL/css/style.css
+++ b/THL/css/style.css
@@ -20828,6 +20828,10 @@ body[data-bg-image] {
     height: 100%;
 }
 
+.box-content.box-50 {
+    width: 50%;
+}
+
 .box-content {
     width: 33.33%;
     float: left;
@@ -20836,14 +20840,47 @@ body[data-bg-image] {
     transition: all 1s;
 }
 
+.texto-banner {
+    width: 200px;
+    display: block;
+    float: right;
+    font-size: 1rem;
+    margin-top: -5rem;
+    margin-right: 5rem;
+    text-align: center;
+}
+
+.fuente-banner {
+    font-size: 1.5rem;
+}
+
 @media (max-width: 780px) {
     .box-content {
         width: 100%;
+    }
+    .texto-banner {
+        width: 200px;
+        margin-top: 0;
+        margin-right: 0;
+        margin-bottom: 1rem;
+        float: none;
     }
 }
 
 .box-content:hover {
     padding: 1.5rem;
+}
+
+.card-thl a:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 37%);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .box-content .card-thl {
