--- a/THL/css/style.css
+++ b/THL/css/style.css
@@ -21041,3 +21041,15 @@ section.hero_block .arrowScrollDownInner img {
         transform: translate(0px, 20px);
     }
 }
+
+section#constact:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 37%);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
