Implementación de hover

--- a/THL/css/style.css
+++ b/THL/css/style.css
@@ -21144,3 +21144,9 @@ span.url {
     -webkit-animation-name: bounceInUp;
     animation-name: bounceInUp;
 }
+
+.mouse_hover:hover {
+    color: #000;
+    text-shadow: 1px 1px 2px black, 0 0 1em #fff, 0 0 0.2em #fff;
+    color: white;
+}
