--- a/THL/css/style.css
+++ b/THL/css/style.css
@@ -22,13 +22,30 @@ Google Fonts
 BODY
 -----------------------------------------------------------------*/
 
+body {
+    cursor: none !important;
+    /* cursor: url('../images/cursor.svg'), auto; */
+}
+
+.cursor {
+    position: fixed;
+    height: 0;
+    width: 0;
+    border: 12px solid #fff;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    transition: width 0.2s, height 0.2s;
+    z-index: 1000000000000000000;
+}
+
 html {
     overflow-x: hidden;
 }
 
 body .body-inner {
+    cursor: none;
     padding: 0;
-    margin: 0;
 }
 
 body .container-wide {
@@ -827,7 +844,6 @@ Grid Filter
 }
 
 .grid-filter li.active {
-    cursor: pointer;
     pointer-events: none;
 }
 
@@ -1187,7 +1203,6 @@ Topbar
 .topbar-dropdown .title {
     border-left: 1px solid #eeeeee;
     padding: 0 20px;
-    cursor: pointer;
     line-height: 40px;
 }
 
@@ -1911,7 +1926,6 @@ Main Menu
     z-index: 1;
     right: -10px;
     top: 0;
-    cursor: pointer;
 }
 
 #mainMenu nav>ul>li .dropdown-menu {
@@ -1960,7 +1974,6 @@ Main Menu
 #mainMenu nav>ul>li .dropdown-menu>li [class*="col-"]>ul>li>a:active {
     background-color: transparent;
     color: #2250fc;
-    cursor: pointer;
 }
 
 #mainMenu nav>ul>li .dropdown-menu>li>a>i,
@@ -3428,7 +3441,6 @@ Search
     line-height: 12px;
     background-color: #2250fc;
     border: 0;
-    cursor: pointer;
     border-radius: 5px;
     color: #ffffff;
     opacity: 0;
@@ -3543,7 +3555,6 @@ Side Push Panel
 }
 
 #side-panel #close-panel>i {
-    cursor: pointer;
     display: block;
     width: 40px;
     height: 40px;
@@ -3943,7 +3954,6 @@ body.side-panel-static #wrapper .container {
 }
 
 #sidepanel .panel-close-x {
-    cursor: pointer;
     position: absolute;
     top: 160px;
     left: -36px;
@@ -4249,7 +4259,6 @@ Page Menu
 
 #pageMenu-trigger {
     float: right;
-    cursor: pointer;
     font-size: 15px;
     height: 48px;
     line-height: 48px;
@@ -4857,9 +4866,9 @@ SLIDER
 }
 
 .inspiro-slider .slide .slide-captions h1 {
-    font-size: 80px;
+    font-size: 11rem;
     font-weight: 700;
-    line-height: 80px;
+    line-height: 10rem;
     margin-bottom: 30px;
     color: #ffffff;
 }
@@ -5160,7 +5169,6 @@ Portfolio
     float: left;
     height: auto;
     padding: 0 0 20px 0;
-    cursor: pointer;
     /*hover state*/
     /*Portfolio Effects*/
     /*Styles*/
@@ -7518,7 +7526,6 @@ Comments
 }
 
 .product-size li label span {
-    cursor: pointer;
     display: block;
     font-size: 1.2em;
     font-weight: 400;
@@ -8518,7 +8525,6 @@ Scroll top
     right: 26px;
     bottom: 0;
     color: #fff;
-    cursor: pointer;
     border-radius: 100px;
     height: 40px;
     width: 40px;
@@ -9194,7 +9200,6 @@ Play Button
 .lines-button {
     appearance: none;
     border: none;
-    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9620,7 +9625,6 @@ td.fc-today {
 .p-dropdown .btn,
 .p-dropdown .title {
     padding-bottom: 10px;
-    cursor: pointer;
     overflow: unset !important;
 }
 
@@ -9821,7 +9825,6 @@ div.dataTables_wrapper div.dataTables_length select {
     padding: 20px;
     transition: all 0.3s ease;
     border: 1px solid #e6e8eb;
-    cursor: pointer;
 }
 
 .p-cb a {
@@ -12245,7 +12248,6 @@ Accordion
     padding-right: 10px;
     margin: 0;
     font-size: 1em;
-    cursor: pointer;
     user-select: none;
 }
 
@@ -12512,7 +12514,6 @@ a.btn:not([href]):not([tabindex]) {
     margin-bottom: 6px;
     outline: none;
     line-height: 14px;
-    cursor: pointer;
 }
 
 button.btn:after,
@@ -15942,7 +15943,6 @@ div.icon-box:before {
     padding: 40px;
     text-align: center;
     transition: background 0.4s ease 0s;
-    cursor: pointer;
 }
 
 .text-box i {
@@ -16205,7 +16205,6 @@ Carousels
     position: absolute;
     top: 50%;
     z-index: 10;
-    cursor: pointer;
     text-align: center;
     transition: all .2s ease 0s;
     color: #9896a6;
@@ -16223,7 +16222,7 @@ Carousels
 }
 
 .flickity-button:hover {
-    background-color: #2250fc;
+    background-color: #0f2123;
 }
 
 .flickity-button:hover:before {
@@ -16388,7 +16387,6 @@ Carousel: Dots
     margin: 0 4px;
     width: 10px;
     height: 10px;
-    cursor: pointer;
     border-radius: 50%;
     overflow: hidden;
     background-color: transparent;
@@ -17876,7 +17874,6 @@ input[type="checkbox"].form-control {
     width: auto;
     margin-right: 13px;
     height: 24px;
-    cursor: pointer;
 }
 
 input[type="color"] {
@@ -17885,7 +17882,6 @@ input[type="color"] {
     min-height: 3px;
     padding: 0;
     border: 0px;
-    cursor: pointer;
 }
 
 input[type="color"]:focus {
@@ -18017,9 +18013,7 @@ Reservation form
     display: none;
 }
 
-.list-group input[type="radio"]+.list-group-item {
-    cursor: pointer;
-}
+.list-group input[type="radio"]+.list-group-item {}
 
 .list-group input[type="radio"]:checked+.list-group-item {
     background-color: #f8f9fa;
@@ -18086,7 +18080,7 @@ z-index: 99999;
 padding: 9px 12px;
 color: #5F5D6D;
 font-weight: 500;
-cursor: pointer;
+
 text-transform: uppercase;
 font-size: 12px;
 letter-spacing: 1px;
@@ -18241,7 +18235,6 @@ Light Box
 }
 
 .mfp-zoom {
-    cursor: pointer;
     cursor: -webkit-zoom-in;
     cursor: -moz-zoom-in;
     cursor: zoom-in;
@@ -18296,7 +18289,6 @@ Light Box
 button.mfp-close,
 button.mfp-arrow {
     overflow: visible;
-    cursor: pointer;
     background: transparent;
     border: 0;
     -webkit-appearance: none;
@@ -18316,7 +18308,6 @@ button::-moz-focus-inner {
 .mfp-close {
     width: 36px !important;
     height: 36px !important;
-    cursor: pointer;
     line-height: 36px;
     position: absolute;
     right: 0;
@@ -18555,9 +18546,7 @@ img.mfp-img {
     max-width: 100%;
 }
 
-.mfp-gallery .mfp-image-holder .mfp-figure {
-    cursor: pointer;
-}
+.mfp-gallery .mfp-image-holder .mfp-figure {}
 
 @media screen and (max-width: 800px) and (orientation: landscape),
 screen and (max-height: 300px) {
@@ -19571,17 +19560,14 @@ Clients Logo
 
 .grid li:hover {
     opacity: 1;
-    cursor: pointer;
 }
 
 .clients-carousel a:hover {
     opacity: 1;
-    cursor: pointer;
 }
 
 .clients-carousel a:hover img {
     opacity: 1;
-    cursor: pointer;
 }
 
 .client-carousel .polo-carousel-item img,
@@ -19628,7 +19614,6 @@ Clients Logo
 }
 
 .grid li:hover {
-    cursor: pointer;
     background-color: #f8f8f8;
 }
 
@@ -19726,7 +19711,6 @@ Pricing Table
     padding-top: 50px;
     margin: 0;
     padding: 0;
-    cursor: pointer;
 }
 
 .pricing-table .plan {
@@ -19933,7 +19917,7 @@ Team
 
 .team .team-item>span {
     font-weight: 600;
-    font-size: 15px;
+    font-size: 1.5rem;
     display: block;
     line-height: 22px;
     color: #0d2024;
@@ -20841,17 +20825,20 @@ body[data-bg-image] {
 }
 
 .texto-banner {
-    width: 200px;
+    width: 526px;
     display: block;
-    float: right;
-    font-size: 1rem;
-    margin-top: -5rem;
+    font-size: 2rem;
+    margin-top: 0;
     margin-right: 5rem;
     text-align: center;
+    position: absolute;
+    bottom: 104px;
+    right: -145px;
 }
 
 .fuente-banner {
-    font-size: 1.5rem;
+    font-size: 2rem;
+    font-style: italic;
 }
 
 @media (max-width: 780px) {
@@ -20859,11 +20846,12 @@ body[data-bg-image] {
         width: 100%;
     }
     .texto-banner {
-        width: 200px;
+        width: 100%;
         margin-top: 0;
         margin-right: 0;
         margin-bottom: 1rem;
         float: none;
+        position: initial;
     }
 }
 
@@ -20965,15 +20953,15 @@ body[data-bg-image] {
 
 .header-sticky .header-inner {
     /* background-color: rgb(5 24 28) !important; */
-    background-color: rgb(173 175 175) !important;
+    /* background-color: rgb(173 175 175) !important; */
 }
 
 .header-sticky .header-inner #mainMenu nav ul.dropdown-menu li a {
-    color: #314145 !important;
+    /* color: #314145 !important; */
 }
 
 .header-sticky .header-inner #mainMenu nav ul li a {
-    color: #fff !important;
+    /* color: #fff !important; */
 }
 
 .submenu-light .header-inner #logo a.content-logo {
@@ -21145,8 +21133,59 @@ span.url {
     animation-name: bounceInUp;
 }
 
-.mouse_hover:hover {
-    color: #000;
-    text-shadow: 1px 1px 2px black, 0 0 1em #fff, 0 0 0.2em #fff;
-    color: white;
+.mouse_hover {
+    font-size: 1.8rem;
+}
+
+.mouse_hover:hover h2 {
+    /* text-shadow: 1px 1px 2px black, 0 0 1em #fff, 0 0 0.2em #fff; */
+    color: transparent !important;
+    -webkit-text-stroke: 1px #bbb;
+}
+
+#edgtf-theme-cursor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    z-index: 10000;
+    mix-blend-mode: difference;
+    /* visibility: hidden; */
+}
+
+#edgtf-theme-cursor circle {
+    fill: #fff;
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-transform: scale(.5);
+    -ms-transform: scale(.5);
+    transform: scale(.5);
+    -webkit-transition: -webkit-transform .2s;
+    -o-transition: transform .2s;
+    transition: transform .2s;
+    transition: transform .2s, -webkit-transform .2s;
+}
+
+#edgtf-theme-cursor path {
+    opacity: 0;
+    -webkit-transition: opacity .05s;
+    -o-transition: opacity .05s;
+    transition: opacity .05s;
+}
+
+body h1:hover~.cursor {
+    width: 100px;
+    height: 100px;
+    border: 2px solid aqua;
+}
+
+a.link-item {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    width: calc(100% - 20px);
 }
