--- a/THL/css/style.css
+++ b/THL/css/style.css
@@ -4866,9 +4866,9 @@ SLIDER
 }
 
 .inspiro-slider .slide .slide-captions h1 {
-    font-size: 11rem;
+    font-size: 7rem;
     font-weight: 700;
-    line-height: 10rem;
+    line-height: 6rem;
     margin-bottom: 30px;
     color: #ffffff;
 }
@@ -16196,7 +16196,7 @@ Carousels
 /* ---- flickity-button ---- */
 
 .flickity-button {
-    background: #fff;
+    background: rgba(0, 0, 0, 0.25) !important;
     width: 40px;
     height: 40px;
     line-height: 40px;
@@ -21188,4 +21188,22 @@ a.link-item {
     bottom: 0;
     height: 100%;
     width: calc(100% - 20px);
+}
+
+@media (max-width: 780px) {
+    .cursor {
+        display: none;
+    }
+}
+
+.whi_we_are::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
